syntax = "proto3";

package search.v1;
option go_package = "github.com/studyguides-com/study-guides-api/api/v1/search;searchv1";

import "v1/shared/tagsearchresult.proto";
import "v1/shared/contexttype.proto";
import "v1/shared/usersearchresult.proto";


  message SearchTagsRequest {
    string query = 1;
    shared.v1.ContextType context = 2;
  }
  
  message SearchTagsResponse {
    repeated shared.v1.TagSearchResult results = 1;
  }

  message SearchUsersRequest {
    string query = 1;
  }
  
  message SearchUsersResponse {
    repeated shared.v1.UserSearchResult results = 1;
  }

  message ListIndexesRequest {
    string query = 1;
  }

  message IndexInfo {
    string name = 1;
    int64 entries = 2;
  }

  message ListIndexesResponse {
    repeated IndexInfo indexes = 1;
  }

service SearchService {
  rpc SearchTags(SearchTagsRequest) returns (SearchTagsResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
  rpc ListIndexes(ListIndexesRequest) returns (ListIndexesResponse);
}

